--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "files": [],
+ 
+  
   "references": [
     {
       "path": "./tsconfig.node.json"
@@ -10,6 +12,8 @@
   ],
   "compilerOptions": {
     // ...
-    "types": ["element-plus/global"]
+    "types": ["element-plus/global"],
+    
   }
 }
+
