--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "codemirror": "^5.65.15",
     "codemirror-editor-vue3": "^2.4.1",
+    "echarts": "^5.4.3",
     "element-plus": "^2.4.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
