--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "codemirror-editor-vue3": "^2.4.1",
     "echarts": "^5.4.3",
     "element-plus": "^2.4.2",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-codemirror": "^6.1.1",
